test_suite5/ALAN/test_suite/alan-2022-examples/failing/006520_mutation.alan
source Ss begin leave 55 or elsif 8 end
